--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
@@ -20,9 +17,7 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
+    "typeRoots": ["./node_modules/@types"],
     "baseUrl": "./",
     "paths": {
       "/opt/nodejs/productsLayer": [
@@ -51,11 +46,11 @@
       ],
       "/opt/nodejs/invoiceWSConnectionLayer": [
         "lambda/invoices/layers/invoiceWSConnectionLayer/nodejs/invoiceWSConnection"
+      ],
+      "/opt/nodejs/authUserInfoLayer": [
+        "lambda/auth/layers/authUserInfoLayer/nodejs/authUserInfo"
       ]
     }
   },
-  "exclude": [
-    "node_modules",
-    "cdk.out"
-  ]
+  "exclude": ["node_modules", "cdk.out"]
 }
